--- a/inventory.cfg
+++ b/inventory.cfg
@@ -1,11 +1,11 @@
 [servers]
-34.89.56.7 ansible_user=Admin ansible_ssh_common_args='-o StrictHostKeyChecking=no' ansible_ssh_private_key_file=/home/Admin/.ssh/id_rsa
+34.89.56.7 ansible_user=Admin ansible_ssh_private_key_file=/home/Admin/.ssh/id_rsa
 35.234.146.247
 
 [swarm-manager]
 35.234.146.247 
 
 [swarm-workers]
-34.89.56.7 ansible_user=Admin ansible_ssh_common_args='-o StrictHostKeyChecking=no' ansible_ssh_private_key_file=/home/Admin/.ssh/id_rsa
+34.89.56.7 ansible_user=Admin ansible_ssh_private_key_file=/home/Admin/.ssh/id_rsa
 
 
