--- a/inventory.cfg
+++ b/inventory.cfg
@@ -1,6 +1,8 @@
 [servers]
 35.222.72.134 ansible_user=Admin ansible_ssh_common_args='-o StrictHostKeyChecking=no' ansible_ssh_private_key_file=/var/lib/jenkins/.ssh/id_rsa
 34.89.56.7
+[local]
+localhost  ansible_connection=local
 
 [swarm-manager]
 35.222.72.134
