--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,55 +1,72 @@
-version: "3"
+  
+version: "3.7"
+
+networks:
+    TheJesusNetwork:
+        driver: overlay
 
 services:
+
     service_1:
-        image: shana12345/microservice_1
-        ports:
-            - "5000:5000"
+        
+        image:
+            shana12345/microservice_1
         environment: 
-            - MYSQL=${MYSQL}
+           - MYSQL=${MYSQL}
             - MYSQLUSER=${MYSQLUSER}
             - MYSQLPASSWORD=${MYSQLPASSWORD}
             - MYSQLDB=${MYSQLDB}
+        ports: 
+            - "5000:5000"
         networks:
-            - Jesus
-        deploy:
-            replicas: 2
-
-    service_2:
-        image: shana12345/microservice_2
-        networks:
-            - Jesus
-        deploy:
-            replicas: 1
-
-    service_3:
-        image: shana12345/microservice_3
-        networks:
-            - Jesus
-        deploy:
-            replicas: 1
-
-    service_4:
-        image: shana12345/microservice_4
-        networks:
-            - Jesus
+            - TheJesusNetwork
         deploy:
             replicas: 3
 
-    nginx:
-        image: shana12345/nginx:1
+    service_2:
+        
+        image:
+            shana12345/microservice_2
+        ports: 
+            - "5001:5001"
+        networks:
+            - TheJesusNetwork
+        deploy:
+            replicas: 3
+
+    service_3:
+        
+        image:
+           shana12345/microservice_3
+        ports: 
+            - "5002:5002"
+        networks:
+            - TheJesusNetwork
+        deploy:
+            replicas: 3
+
+    service_4:
+        
+        
+        image:
+            shana12345/microservice_3
+        ports: 
+            - "5003:5003"
+        networks:
+            - TheJesusNetwork
+        deploy:
+            replicas: 3
+
+    service_nginx:
+        image: nginx:latest
         ports:
             - "80:80"
         networks:
-            - Jesus
-        depends_on:
+            - TheJesusNetwork
+        depends_on: 
             - service_1
             - service_2
             - service_3
             - service_4
         deploy:
-            replicas: 3
-
-networks:
-    Jesus:
-        driver: overlay
+            replicas: 1
